# ear

./: .env.example  .firebaserc  .gitignore  README.md  firestore.indexes.json  firestore.rules  package-lock.json  package.json
.github/workflows/: deploy.yml
apps/api/: .cloudrun.env.yaml  Dockerfile  pyproject.toml
apps/api/app/: __init__.py  audit.py  auth.py  firestore_store.py  integrations.py  main.py  models.py  settings.py
apps/web/: .cloudrun.env.yaml  Dockerfile  next.config.mjs  package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
apps/web/app/account/: page.tsx
apps/web/app/book/: BookFlow.tsx  page.tsx
apps/web/app/call/: CallFlow.tsx  LiveKitCallSession.tsx  page.tsx
apps/web/app/consent/: ConsentFlow.tsx  page.tsx
apps/web/app/forgot-password/: page.tsx
apps/web/app/host/: HostDashboard.tsx  page.tsx
apps/web/app/lib/: api.ts  authErrors.ts  authRedirects.ts  booking.ts  catalog.ts  firebase.ts  noIndexMetadata.ts  site.ts  (+1 more)
apps/web/scripts/: set-firebase-role.mjs
apps/web/server/: audit.test.ts  audit.ts  auth.test.ts  auth.ts  firebase.ts  http.ts  integrations.ts  schemas.ts  sessions.ts  settings.ts  store.ts
docs/: api-authorization.md  architecture.md  local-dev.md  product-spec.md
infra/: README.md  cloud-run.md  cloudflare.md  github-actions.md
infra/cloudflare-proxy/: package-lock.json  package.json  wrangler.toml
infra/cloudflare-proxy/src/: index.js
infra/scripts/: set-livekit-secrets.sh  setup-cloudflare-dns.sh  setup-github-deploy.sh
(+45 files in other folders)
